remove out files 4 last test

--- a/l02/lsn02.ipynb
+++ b/l02/lsn02.ipynb
@@ -451,10 +451,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "χ² of the fit (discrete case): 0.00004440\n",
-      "reduced χ² of the fit (discrete case): 0.00000045\n",
-      "χ² of the fit (continuous case): 0.00003750\n",
-      "reduced χ² of the fit (continuous case): 0.00000038\n"
+      "χ² of the fit (discrete case):\t\t\t0.00004440\n",
+      "reduced χ² of the fit (discrete case):\t\t0.00000045\n",
+      "χ² of the fit (continuous case):\t\t0.00003750\n",
+      "reduced χ² of the fit (continuous case):\t0.00000038\n"
      ]
     }
    ],
@@ -497,14 +497,14 @@
     "d_chisq = np.sum((ADRW['module'] - f(x+1, kfit))**2 / f(x+1, kfit))\n",
     "red_d_chisq = d_chisq / (len(x) - 2)\n",
     "\n",
-    "print(f'\\N{GREEK SMALL LETTER CHI}\\N{SUPERSCRIPT TWO} of the fit (discrete case): {d_chisq:.8f}')\n",
-    "print(f'reduced \\N{GREEK SMALL LETTER CHI}\\N{SUPERSCRIPT TWO} of the fit (discrete case): {red_d_chisq:.8f}')\n",
+    "print(f'\\N{GREEK SMALL LETTER CHI}\\N{SUPERSCRIPT TWO} of the fit (discrete case):\\t\\t\\t{d_chisq:.8f}')\n",
+    "print(f'reduced \\N{GREEK SMALL LETTER CHI}\\N{SUPERSCRIPT TWO} of the fit (discrete case):\\t\\t{red_d_chisq:.8f}')\n",
     "\n",
     "c_chisq = np.sum((ACRW['module'] - f(x+1, cfit))**2 / f(x+1, cfit))\n",
     "red_c_chisq = c_chisq / (len(x) - 2)\n",
     "\n",
-    "print(f'\\N{GREEK SMALL LETTER CHI}\\N{SUPERSCRIPT TWO} of the fit (continuous case): {c_chisq:.8f}')\n",
-    "print(f'reduced \\N{GREEK SMALL LETTER CHI}\\N{SUPERSCRIPT TWO} of the fit (continuous case): {red_c_chisq:.8f}')"
+    "print(f'\\N{GREEK SMALL LETTER CHI}\\N{SUPERSCRIPT TWO} of the fit (continuous case):\\t\\t{c_chisq:.8f}')\n",
+    "print(f'reduced \\N{GREEK SMALL LETTER CHI}\\N{SUPERSCRIPT TWO} of the fit (continuous case):\\t{red_c_chisq:.8f}')"
    ]
   },
   {
